统一项目到Java8并清理高版本API (Unify project to Java 8 and remove newer APIs)